Feat/worker (#1)
* feat: workflow worker

* chore: nitpicking

---------
